--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -20,7 +20,7 @@ spec:
         app: deploy-rollupdate
     spec:
       containers:
-        - image: 'swr.troila.com/test/test:1.1'
+        - image: tomcat
           imagePullPolicy: IfNotPresent
           name: tomcat
       restartPolicy: Always
